@@ -1,6 +1,5 @@
 package com.sfsctech.support.common.security.des3;
 
-import com.sfsctech.support.common.security.EncrypterTool;
 import com.sfsctech.support.common.util.AssertUtil;
 import com.sfsctech.support.common.util.HexUtil;
 import com.sfsctech.support.common.security.base64.Base64;
@@ -15,6 +14,7 @@ import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.DESedeKeySpec;
 import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
+import java.nio.charset.StandardCharsets;
 import java.security.Key;
 
 /**
@@ -33,7 +33,7 @@ public class Des3 {
     static {
         try {
             String alg = "DESede";
-            SecretKey secretKey = new SecretKeySpec("*:@7$8!t*:@7$8!t*:@7$8!t".getBytes(), alg);
+            SecretKey secretKey = new SecretKeySpec("*:@7$8!t*:@7$8!t*:@7$8!t".getBytes(StandardCharsets.UTF_8), alg);
             ecipher = Cipher.getInstance(alg);
             dcipher = Cipher.getInstance(alg);
 
@@ -54,7 +54,7 @@ public class Des3 {
         AssertUtil.isNotBlank(data, "加密信息为空");
         try {
             // Encode the string into bytes using utf-8
-            byte[] utf8 = data.getBytes("UTF8");
+            byte[] utf8 = data.getBytes(StandardCharsets.UTF_8);
             // Encrypt
             byte[] enc = ecipher.doFinal(utf8);
             // Encode bytes to base64 to get a string
@@ -80,7 +80,7 @@ public class Des3 {
             byte[] utf8 = new byte[0];
             if (dec != null) utf8 = dcipher.doFinal(dec);
             // Decode using utf-8
-            return new String(utf8, "UTF8");
+            return new String(utf8, StandardCharsets.UTF_8);
         } catch (Exception e) {
             logger.error("密文:" + data + "解密失败", e);
         }
@@ -89,15 +89,17 @@ public class Des3 {
 
     private static final String key = "YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4";
 
+    private static final String Transforms = "DESede";
+
     /**
-     * ECB加密,不要IV
+     * ECB加密，不要IV，返回Base64格式
      *
      * @param data 明文
      * @return 密文
      */
-    public static String encryptECB(String data) {
+    public static String encryptECBToBase64(String data) {
         try {
-            return HexUtil.toHexString(encryptECB(new BASE64Decoder().decodeBuffer(key), data.getBytes("UTF-8")));
+            return Base64.encrypt(encryptECB(key.getBytes(StandardCharsets.UTF_8), data.getBytes(StandardCharsets.UTF_8)));
         } catch (Exception e) {
             logger.error("明文:" + data + "ECB加密失败", e);
         }
@@ -105,18 +107,28 @@ public class Des3 {
     }
 
     /**
-     * ECB加密,不要IV
+     * ECB加密，不要IV，返回Hex格式
+     *
+     * @param data 明文
+     * @return 密文
+     */
+    public static String encryptECBToHex(String data) {
+        return HexUtil.toHexString(encryptECBToBase64(data).getBytes(StandardCharsets.UTF_8));
+    }
+
+    /**
+     * ECB加密，不要IV
      *
      * @param key  密钥
      * @param data 明文
      * @return Base64编码的密文
      */
-    public static byte[] encryptECB(byte[] key, byte[] data) {
+    private static byte[] encryptECB(byte[] key, byte[] data) {
         try {
             DESedeKeySpec spec = new DESedeKeySpec(key);
-            SecretKeyFactory keyFactory = SecretKeyFactory.getInstance("desede");
+            SecretKeyFactory keyFactory = SecretKeyFactory.getInstance(Transforms);
             Key desKey = keyFactory.generateSecret(spec);
-            Cipher cipher = Cipher.getInstance("desede/ECB/PKCS5Padding");
+            Cipher cipher = Cipher.getInstance(Transforms + "/ECB/PKCS5Padding");
             cipher.init(Cipher.ENCRYPT_MODE, desKey);
 
             return cipher.doFinal(data);
@@ -127,14 +139,14 @@ public class Des3 {
     }
 
     /**
-     * ECB解密,不要IV
+     * 根据Base64格式，ECB解密，不要IV
      *
      * @param data 密文
      * @return 明文
      */
-    public static String decryptECB(String data) {
+    public static String decryptECBByBase64(String data) {
         try {
-            return new String(decryptECB(new BASE64Decoder().decodeBuffer(key), HexUtil.fromHexString(data)), "UTF-8");
+            return new String(decryptECB(key.getBytes(StandardCharsets.UTF_8), Base64.decrypt(data)), StandardCharsets.UTF_8);
         } catch (Exception e) {
             logger.error("密文:" + data + "ECB解密失败", e);
         }
@@ -142,18 +154,33 @@ public class Des3 {
     }
 
     /**
-     * ECB解密,不要IV
+     * 根据Base64格式，ECB解密，不要IV
+     *
+     * @param data 密文
+     * @return 明文
+     */
+    public static String decryptECBByHex(String data) {
+        try {
+            return decryptECBByBase64(new String(HexUtil.fromHexString(data), StandardCharsets.UTF_8));
+        } catch (Exception e) {
+            logger.error("密文:" + data + "ECB解密失败", e);
+        }
+        return "";
+    }
+
+    /**
+     * ECB解密，不要IV
      *
      * @param key  密钥
      * @param data Base64编码的密文
      * @return 明文
      */
-    public static byte[] decryptECB(byte[] key, byte[] data) {
+    private static byte[] decryptECB(byte[] key, byte[] data) {
         try {
             DESedeKeySpec spec = new DESedeKeySpec(key);
-            SecretKeyFactory keyFactory = SecretKeyFactory.getInstance("desede");
+            SecretKeyFactory keyFactory = SecretKeyFactory.getInstance(Transforms);
             Key desKey = keyFactory.generateSecret(spec);
-            Cipher cipher = Cipher.getInstance("desede/ECB/PKCS5Padding");
+            Cipher cipher = Cipher.getInstance(Transforms + "/ECB/PKCS5Padding");
             cipher.init(Cipher.DECRYPT_MODE, desKey);
 
             return cipher.doFinal(data);
@@ -166,14 +193,29 @@ public class Des3 {
     private static final byte[] keyiv = {1, 2, 3, 4, 5, 6, 7, 8};
 
     /**
-     * CBC加密
+     * CBC加密，返回Base64格式
      *
      * @param data 明文
      * @return 密文
      */
-    public static String encryptCBC(String data) {
+    public static String encryptCBCToBase64(String data) {
         try {
-            return HexUtil.toHexString(encryptCBC(new BASE64Decoder().decodeBuffer(key), keyiv, data.getBytes("UTF-8")));
+            return Base64.encrypt(encryptCBC(key.getBytes(StandardCharsets.UTF_8), data.getBytes(StandardCharsets.UTF_8)));
+        } catch (Exception e) {
+            logger.error("明文:" + data + "CBC加密失败", e);
+        }
+        return "";
+    }
+
+    /**
+     * CBC加密，返回Hex格式
+     *
+     * @param data 明文
+     * @return 密文
+     */
+    public static String encryptCBCToHex(String data) {
+        try {
+            return HexUtil.toHexString(encryptCBCToBase64(data).getBytes(StandardCharsets.UTF_8));
         } catch (Exception e) {
             logger.error("明文:" + data + "CBC加密失败", e);
         }
@@ -183,19 +225,18 @@ public class Des3 {
     /**
      * CBC加密
      *
-     * @param key   密钥
-     * @param keyiv IV
-     * @param data  明文
+     * @param key  密钥
+     * @param data 明文
      * @return Base64编码的密文
      */
-    public static byte[] encryptCBC(byte[] key, byte[] keyiv, byte[] data) {
+    private static byte[] encryptCBC(byte[] key, byte[] data) {
         try {
             DESedeKeySpec spec = new DESedeKeySpec(key);
-            SecretKeyFactory keyFactory = SecretKeyFactory.getInstance("desede");
+            SecretKeyFactory keyFactory = SecretKeyFactory.getInstance(Transforms);
             Key desKey = keyFactory.generateSecret(spec);
 
-            Cipher cipher = Cipher.getInstance("desede/CBC/PKCS5Padding");
-            IvParameterSpec ips = new IvParameterSpec(keyiv);
+            Cipher cipher = Cipher.getInstance(Transforms + "/CBC/PKCS5Padding");
+            IvParameterSpec ips = new IvParameterSpec(Des3.keyiv);
             cipher.init(Cipher.ENCRYPT_MODE, desKey, ips);
 
             return cipher.doFinal(data);
@@ -206,14 +247,29 @@ public class Des3 {
     }
 
     /**
-     * CBC解密
+     * 根据Base64格式，CBC解密
      *
      * @param data 密文
      * @return 明文
      */
-    public static String decryptCBC(String data) {
+    public static String decryptCBCByBase64(String data) {
         try {
-            return new String(decryptCBC(new BASE64Decoder().decodeBuffer(key), keyiv, HexUtil.fromHexString(data)), "UTF-8");
+            return new String(decryptCBC(key.getBytes(StandardCharsets.UTF_8), Base64.decrypt(data)), StandardCharsets.UTF_8);
+        } catch (Exception e) {
+            logger.error("密文:" + data + "CBC解密失败", e);
+        }
+        return "";
+    }
+
+    /**
+     * 根据Hex格式，CBC解密
+     *
+     * @param data 密文
+     * @return 明文
+     */
+    public static String decryptCBCByHex(String data) {
+        try {
+            return decryptCBCByBase64(new String(HexUtil.fromHexString(data), StandardCharsets.UTF_8));
         } catch (Exception e) {
             logger.error("密文:" + data + "CBC解密失败", e);
         }
@@ -223,19 +279,18 @@ public class Des3 {
     /**
      * CBC解密
      *
-     * @param key   密钥
-     * @param keyiv IV
-     * @param data  Base64编码的密文
+     * @param key  密钥
+     * @param data Base64编码的密文
      * @return 明文
      */
-    public static byte[] decryptCBC(byte[] key, byte[] keyiv, byte[] data) {
+    private static byte[] decryptCBC(byte[] key, byte[] data) {
         try {
             DESedeKeySpec spec = new DESedeKeySpec(key);
-            SecretKeyFactory keyFactory = SecretKeyFactory.getInstance("desede");
+            SecretKeyFactory keyFactory = SecretKeyFactory.getInstance(Transforms);
             Key desKey = keyFactory.generateSecret(spec);
 
-            Cipher cipher = Cipher.getInstance("desede/CBC/PKCS5Padding");
-            IvParameterSpec ips = new IvParameterSpec(keyiv);
+            Cipher cipher = Cipher.getInstance(Transforms + "/CBC/PKCS5Padding");
+            IvParameterSpec ips = new IvParameterSpec(Des3.keyiv);
             cipher.init(Cipher.DECRYPT_MODE, desKey, ips);
 
             return cipher.doFinal(data);
@@ -245,39 +300,42 @@ public class Des3 {
         return new byte[0];
     }
 
-    public static void main(String[] args) throws Exception {
-        byte[] key = new BASE64Decoder().decodeBuffer("YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4");
-        byte[] keyiv = {1, 2, 3, 4, 5, 6, 7, 8};
+    public static void main(String[] args) {
+        String data = "许德麟##ygpt2355q0ti3mfcenukym55##146271##1330515392763##-406606902";
 
-        byte[] data = "许德麟##ygpt2355q0ti3mfcenukym55##146271##1330515392763##-406606902".getBytes("UTF-8");
-
-        System.out.println("ECB加密解密");
-        byte[] str3 = encryptECB(key, data);
-        byte[] str4 = decryptECB(key, str3);
-        System.out.println(HexUtil.toHexString(str3));
-        System.out.println(new String(str4, "UTF-8"));
+        System.out.println("ECB加密Base64");
+        String str3 = encryptECBToBase64(data);
+        System.out.println(str3);
+        System.out.println("ECB解密Base64");
+        String str4 = decryptECBByBase64(str3);
+        System.out.println(str4);
 
         System.out.println("--------------");
 
-        System.out.println("CBC加密解密");
-        byte[] str5 = encryptCBC(key, keyiv, data);
-        byte[] str6 = decryptCBC(key, keyiv, str5);
-        System.out.println(new BASE64Encoder().encode(str5));
-        System.out.println(new String(str6, "UTF-8"));
-
-        System.out.println("--------------" + HexUtil.getEncryptKey());
-        System.out.println(EncrypterTool.encrypt("许德麟##ygpt2355q0ti3mfcenukym55##146271##1330515392763##-406606902", HexUtil.getEncryptKey()));
+        System.out.println("ECB加密Hex");
+        str3 = encryptECBToHex(data);
+        System.out.println(str3);
+        System.out.println("ECB解密Hex");
+        str4 = decryptECBByHex(str3);
+        System.out.println(str4);
 
         System.out.println("--------------");
-        System.out.println(Des3.encrypt("许德麟##ygpt2355q0ti3mfcenukym55##146271##1330515392763##-406606902"));
-        System.out.println(Des3.decrypt("QPq6wZQifcIBSaafOIZ_EQRsmLBbUKyhNRNTDo2nLlHfopXQa4uUTJvoCOLKmhuFN0TjM-23hLovC7pznSWwGE85T8TqT2mS"));
+
+        System.out.println("CBC加密Base64");
+        String str5 = encryptCBCToBase64(data);
+        System.out.println(str5);
+        System.out.println("CBC解密Base64");
+        String str6 = decryptCBCByBase64(str5);
+        System.out.println(str6);
 
         System.out.println("--------------");
-        System.out.println(Des3.encryptECB("许德麟##ygpt2355q0ti3mfcenukym55##146271##1330515392763##-406606902"));
-        System.out.println(Des3.decryptECB("2E24BB2FAF0A83FA0BE241257A81E3B38D1353792B14498AF94ADF14606CCDBFEEC9202069213BD8A6A75E978AA7F64336D07EEE76C11B7AE5269179E09F60059D71635B3BE5A155"));
 
-        System.out.println("--------------");
-        System.out.println(Des3.encryptCBC("许德麟##ygpt2355q0ti3mfcenukym55##146271##1330515392763##-406606902"));
-        System.out.println(Des3.decryptCBC("65C6F4AE34441E2F4CE633C15A8DC08C97576ECAFAB1E9766676F21B4FF258C7C0EE7E2B965AD934007BFAF89F111DF8E5550A08BC2693869760DA09888DA297E8035D13FF6FCC24"));
+        System.out.println("CBC加密Hex");
+        str5 = encryptCBCToHex(data);
+        System.out.println(str5);
+        System.out.println("CBC解密Hex");
+        str6 = decryptCBCByHex(str5);
+        System.out.println(str6);
+
     }
 }
